--- a/style.css
+++ b/style.css
@@ -65,4 +65,35 @@ textarea {
     border: 1px solid #000;
     border-radius: 5px;
     outline: none;
+    font-size: 1.6rem;
+}
+
+/* Dynamic Styles */
+
+.bold {
+    font-weight: bold;
+}
+
+.italic {
+    font-style: italic;
+}
+
+.underline {
+    text-decoration: underline;
+}
+
+.align-left {
+    text-align: left;
+}
+
+.align-center {
+    text-align: center;
+}
+
+.align-right {
+    text-align: right;
+}
+
+.align-justify {
+    text-align: justify;
 }
