--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +11,7 @@ html {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 header h1 {
@@ -28,6 +30,7 @@ main {
     display: flex;
     justify-content: space-between;
     position: relative;
+    padding-bottom: 1rem;
     margin-bottom: 1rem;
 }
 
@@ -42,13 +45,23 @@ main {
 
 .icons .set {
     display: flex;
+    align-items: center;
     gap: 1rem;
+}
+
+.icons .set p {
+    font-size: 1.6rem;
+    margin-right: 1rem;
+}
+
+.icons .set input {
+    width: 25%;
+    height: 100%;
 }
 
 .icon {
     font-size: 2rem;
     padding: 1rem;
-    margin-bottom: 5px;
     cursor: pointer;
     transition: all 0.3s;
 }
@@ -59,6 +72,7 @@ main {
 }
 
 textarea {
+    font-family: 'Poppins', sans-serif;
     width: 100%;
     height: 30rem;
     padding: 2rem;
@@ -96,4 +110,11 @@ textarea {
 
 .align-justify {
     text-align: justify;
+}
+
+/* Responsive */
+
+@media screen and (max-width: 55rem) {
+    .icons .set {gap: 0.5rem;}
+    p, .icon {font-size: 1.6rem;}
 }
